# franz

./: .gitignore  Cargo.toml  Dockerfile  README.md  load.Dockerfile  replicator.Dockerfile
.github/workflows/: ci.yml
load/: Cargo.toml  Dockerfile
load/src/: kafka.rs  main.rs
replicator/: Cargo.toml
replicator/src/: kafka.rs  main.rs
src/: kafka.rs  main.rs
