[package]
name = "franz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0.0"
env_logger = "0.7"
clap = "2"
kafka = "0.8"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3"
tokio = {version = "0.2.13", features = ["rt-core", "blocking"]}
log = "0.4.8"
dashmap = "3.11.4"
lazy_static = "1.4.0"
proc-macro-hack = "0.5.15"