[package]
name = "franz-replicator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
clap = "2"
kafka = "0.8"
log = "0.4.8"
tokio = {version = "0.2.13", features = ["full"]}
futures = "0.3"